# Open-LLM-VTuber

./: .dockerignore  DOCKER.md  Makefile  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
config_templates/: conf.ZH.default.yaml  conf.default.yaml
src/open_llm_vtuber/: routes.py  websocket_handler.py
src/open_llm_vtuber/agent/vector_stores/: base.py  chroma.py
src/open_llm_vtuber/config_manager/: tts.py
src/open_llm_vtuber/conversations/: conversation_utils.py  group_conversation.py  single_conversation.py  tts_manager.py
src/open_llm_vtuber/tts/: azure_tts.py  bark_tts.py  coqui_tts.py  cosyvoice2_tts.py  cosyvoice_tts.py  edge_tts.py  fish_api_tts.py  gpt_sovits_tts.py  melo_tts.py  openai_tts.py  pyttsx3_tts.py  sherpa_onnx_tts.py  spark_tts.py  tts_factory.py  tts_interface.py
src/open_llm_vtuber/utils/: audio_payload.py  audio_stream_payload.py  stream_audio.py  streaming_payload.py
